--- a/src/styles/Meme.css
+++ b/src/styles/Meme.css
@@ -3,14 +3,32 @@
   grid-template: 40px 40px / 1fr 1fr;
   gap: 20px;
   margin: 10px;
+  width: 700px;
 }
 .form-button {
   grid-column: 1/-1;
   border-radius: 10px;
   color: white;
-  background-color: blue;
+  background-color: rgb(9, 9, 112);
   cursor: pointer;
+  width: 300px;
 }
 main {
   padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
+
+main div {
+  width: 700px;
+  align-self: center;
+}
+.meme--text {
+  position: absolute;
+  font-family: "Roboto", sans-serif;
+  font-size: 40px;
+  color: white;
+  -webkit-text-stroke: 1px black;
+  letter-spacing: -0.05rem;
 }
